--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.14.1",
     "express-request-proxy": "^2.0.0",
     "fontawesome-markers": "^4.6.1",
+    "page": "^1.7.1",
     "reset-css": "^2.2.0"
   }
 }
