--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/reganoneill/doge-crime#readme",
   "dependencies": {
+    "body-parser": "^1.16.0",
     "express": "^4.14.1",
     "express-request-proxy": "^2.0.0",
     "fontawesome-markers": "^4.6.1",
